# yoink

./: .envrc  .gitignore  LICENSE  README.md  manifest.scm  pyproject.toml
src/yoink/: __init__.py  cli.py  config.py  models.py
src/yoink/jobs/: __init__.py  db.py  worker.py
src/yoink/metadata/: __init__.py  cache.py  coverart.py  musicbrainz.py
src/yoink/tagging/: __init__.py  beets_tagger.py  mutagen_tagger.py  replaygain.py
src/yoink/tui/: __init__.py  app.py  resolve.py
src/yoink/youtube/: __init__.py  downloader.py  matcher.py  search.py
tests/: smoke_beets.py  smoke_metadata.py  smoke_tui.py  smoke_worker.py  test_beets_skip_fallback.py  test_coverart.py  test_db_manual.py  test_downloader.py  test_featured_artists.py  test_matcher.py  test_query.py  test_replaygain.py  test_search.py  test_tagging_paths.py  test_worker_quality.py
