[project]
name = "yoink"
version = "0.2.3"
description = "TUI music browser that crawls YouTube Music and yoinks full albums via yt-dlp"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47",
    "rapidfuzz>=3.0",
    "ytmusicapi>=1.12",
    "yt-dlp>=2025.1.1",
    "beets>=2.0",
    "platformdirs>=4.0",
    "httpx>=0.27",
]

[project.scripts]
yoink = "yoink.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yoink"]

[dependency-groups]
# ruff is intentionally NOT here: its PyPI wheel is a standalone ELF binary
# whose hardcoded loader doesn't exist on Guix System. Use Guix's ruff instead
# (it's in manifest.scm): `guix shell ruff -- ruff check src tests`.
dev = [
    "pytest>=8.0",
]

[tool.uv]
# Guix-provided CPython only; uv's prebuilt FHS pythons won't run on Guix System.
python-downloads = "never"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
